# simple-file-rotation

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
tests/: rotation_test.rs
