[package]
name = "simple-file-rotation"
version = "0.1.0"
edition = "2021"
authors = ["Robert Krahn <robert@kra.hn>"]
repository = "https://github.com/rksm/simple-file-rotation"
license-file = "LICENSE"
description = "A very simple file rotator."
exclude = [".dir-locals.el"]

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
