[package]
name = "simple-file-rotation"
version = "0.3.1"
edition = "2021"
authors = ["Robert Krahn <robert@kra.hn>"]
repository = "https://github.com/rksm/simple-file-rotation"
license-file = "LICENSE"
description = "A very simple file rotator."
exclude = [".dir-locals.el"]
documentation = "https://docs.rs/simple-file-rotation/latest/simple_file_rotation/"

[dependencies]
